--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "uuidv4": "^6.2.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "@types/nodemailer": "^6.4.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
