--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "nodemailer": "^6.5.0",
-    "uuidv4": "^6.2.7"
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
