--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
